# ocaml-uint

./: .gitignore  README.md  _oasis  _tags  dune-project  myocamlbuild.ml  opam  setup.ml  uint.ml  uint.mllib  uint.opam  uint128.mllib  uint32.ml  uint32.mli  uint32.mllib  uint32_stubs.c  uint64.mllib  uint64_stubs.c
debian/: changelog  control
lib/: dune  uint.ml  uint128.ml  uint128.mli  uint16.ml  uint16.mli  uint32.ml  uint32.mli  uint64.ml  uint64.mli  uint8.ml  uint8.mli
spec/: dune  test.ml
